--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".anim.AnimatorActivity" />
         <activity android:name=".rxjava.FirstRxjavaActivity" />
@@ -20,14 +24,18 @@
         <activity
             android:name=".appbar.AppBarActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".ruler.RulerActivity"></activity>
-        <activity android:name=".clickdispatch.ClickDispatchActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".customView.ruler.RulerActivity">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
+        <activity android:name=".clickdispatch.ClickDispatchActivity">
+
+        </activity>
+
+        <activity android:name=".swipeback.SwipeBackActivity"
+            android:theme="@style/MyTheme">
+
+        </activity>
+        <activity android:name=".handle.HandleActivity" />
     </application>
 
 </manifest>
