--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".customView.CoustomViewActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,17 +25,11 @@
         <activity
             android:name=".appbar.AppBarActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".customView.ruler.RulerActivity">
-
-        </activity>
-        <activity android:name=".clickdispatch.ClickDispatchActivity">
-
-        </activity>
-
-        <activity android:name=".swipeback.SwipeBackActivity"
-            android:theme="@style/MyTheme">
-
-        </activity>
+        <activity android:name=".customView.ruler.RulerActivity"></activity>
+        <activity android:name=".clickdispatch.ClickDispatchActivity"></activity>
+        <activity
+            android:name=".swipeback.SwipeBackActivity"
+            android:theme="@style/MyTheme"></activity>
         <activity android:name=".handle.HandleActivity" />
     </application>
 
