--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,10 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
+//        jcenter()
+        maven {
+            url 'https://maven.aliyun.com/repository/jcenter'
+        }
         mavenCentral()
     }
     dependencies {
@@ -20,7 +23,10 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+//        jcenter()
+        maven {
+            url 'https://maven.aliyun.com/repository/jcenter'
+        }
     }
 }
 
